FE - Fix des css de sFilter et sFilterPanel pour améliorer la visibilité - 2

--- a/frontend/src/assets/styles/sMultiFilter.css
+++ b/frontend/src/assets/styles/sMultiFilter.css
@@ -152,7 +152,7 @@
 .s-multi-filter__active-filters {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.25rem;
   margin-bottom: 1rem;
 }
 
